tests/ui/variant-empty-not-matched.stderr
error: `Variant2` doesn't match pattern `tuple(_)`
 --> tests/ui/variant-empty-not-matched.rs:7:5
  |
7 |     Variant2()
  |     ^^^^^^^^
